--- a/MedidoresWeb/MedidoresWeb/Site.Master
+++ b/MedidoresWeb/MedidoresWeb/Site.Master
@@ -19,11 +19,11 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="Default.aspx">Home</a>
+                            <a class="nav-link active" style="font-size:large" href="Default.aspx">Home</a>
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Estaciones
+                            <a class="nav-link dropdown-toggle" role="button" style="font-size:large" data-bs-toggle="dropdown" aria-expanded="false">Estaciones
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="AgregarEstacion.aspx">Registrar</a></li>
@@ -32,7 +32,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Puntos de Carga
+                            <a class="nav-link dropdown-toggle" href="#" style="font-size:large" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Puntos de Carga
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="AgregarPunto.aspx">Registrar</a></li>
